# supabase_rs

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: rust.yml
docs/: README.md  RPC.md
docs/plans/: 2026-03-05-joins-support.md
scripts/: test-joins.sh
src/: lib.rs  query.rs  type_gen.rs
src/query_builder/: builder.rs  join.rs  mod.rs
src/tests/: base.rs  mod.rs  readme.md
src/tests/methods/: delete.rs  insert.rs  insert_if_unique_numeric.rs  insert_if_unique_string.rs  insert_numeric.rs  insert_string.rs  select.rs  select_filter.rs  select_first.rs  select_joins.rs  select_single.rs  select_stacked_queries.rs  select_with_columns.rs  select_with_count.rs  select_with_count_and_filter.rs  unit_query_build.rs  update_with_column.rs  upsert_numeric.rs  upsert_string.rs
supabase/: seed.sql
supabase/migrations/: 20260203170704_test_tables.sql  20260305_add_join_fixtures.sql
