[dependencies]
anyhow = "1.0.86"
cruet = "0.15.0"
dotenv = "0.15.0"
postgres = "0.19.10"
rand = "0.10.0"
rust_decimal = "1.36.0"
serde_json = "1.0.111"
thiserror = "2.0.12"
tokio-postgres = "0.7.13"

[dependencies.chrono]
features = ["serde"]
version = "0.4.40"

[dependencies.regex]
optional = false
version = "1.10.5"

[dependencies.reqwest]
default-features = false
features = [
    "gzip",
    "json",
]
version = "0.13.1"

[dependencies.serde]
features = ["derive"]
version = "1.0.196"

[dependencies.tokio]
features = ["full"]
version = "1.37.0"

[dependencies.uuid]
features = ["serde"]
version = "1.16.0"

[dev-dependencies.tokio]
features = ["full"]
version = "1.37.0"

[features]
default = [
    "native_tls",
    "nightly",
]
native_tls = ["reqwest/native-tls"]
nightly = []
rpc = []
rustls = ["reqwest/rustls"]
storage = []

[lints.clippy]
all = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
complexity = "warn"
correctness = "warn"
create_dir = "warn"
missing_assert_message = "warn"
panic_in_result_fn = "warn"
perf = "warn"
str_to_string = "warn"
style = "warn"
suspicious = "warn"
todo = "warn"
unimplemented = "warn"
unwrap_used = "warn"
wildcard_enum_match_arm = "warn"

[lints.rust]
deprecated = "warn"
elided_lifetimes_in_paths = "warn"
rust_2021_prelude_collisions = "warn"
semicolon_in_expressions_from_macros = "warn"
trivial_numeric_casts = "warn"
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"

[lints.rustdoc]
all = "warn"
missing_crate_level_docs = "warn"

[package]
authors = ["Floris floris@xylex.ai"]
description = "Lightweight Rust client for Supabase REST and GraphQL"
edition = "2021"
exclude = ["src/tests/*"]
license = "MIT"
name = "supabase_rs"
readme = "README.md"
repository = "https://github.com/floris-xlx/supabase_rs"
version = "0.7.0"
